# Hf2-TwoWay

./: LICENSE  README.md  example.py  pyproject.toml  setup.cfg
hf2/: __init__.py  analyis.py  analysis.py  conductor.py  config.py  conversion.py  coordinator.py  musings.txt
hf2/tinker_spy/: config.py
hf2hw/: analysis.py  conductor.py  config.py  coordinator.py
hf2tw/: analysis.py  conductor.py  config.py  coordinator.py
scripts/: steering.ipynb
testfolder/SimulationTest/A1-5-1/: F7_ramp.dyn  F7_ramp.xyz  F7_ramp4.dyn
testfolder/SimulationTest/A1-5-1/XYZs/: F7_ramp2_converted.xyz  F7_ramp3_converted.xyz  F7_ramp4_converted.xyz
testfolder/SimulationTest/A1-6/: F7_ramp2.dyn  F7_ramp3.dyn
testfolder/SimulationTest/A1-6/XYZs/: F7_ramp_converted.xyz
